# nouns

./: README.md  example.txt  pyproject.toml
nouns/: __main__.py  nouns.py
